kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-test-service
spec:
  type: NodePort
  selector:
    app: k8s-test-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
